veil-tests/src/compile_tests/fail/redact_units.rs
fn main() {}

#[derive(veil::Redact)]
struct Foos;

#[derive(veil::Redact)]
enum Fooe {
    #[redact(all)]
    Bar,
}
